fixed overflowing error message

--- a/styles/SignUpPage/signUpPage.module.scss
+++ b/styles/SignUpPage/signUpPage.module.scss
@@ -156,7 +156,7 @@
       }
 
       p {
-        height: 30px;
+        min-height: 30px;
         box-sizing: border-box;
         font-size: 0.76rem;
         font-weight: 500;
@@ -166,7 +166,7 @@
         background-color: #d25380;
 
         margin-top: 0.3rem;
-        padding: 0.5rem 0.3rem;
+        padding: 0.4rem 0.3rem;
 
         border-radius: 0.3rem;
       }
